<resources>
    <string name="app_name">Razer Insure</string>
    <string name="title_home">Home</string>
    <string name="title_browse">Browse</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>
    <string name="title_account_overview">Account Overview</string>
    <string name="saved_card_description">This is a picture of a credit card</string>
    <string name="title_saved_cards">Saved Cards</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_add_new_card">+ Add New Card</string>
    <string name="title_plan_selected">This is a selected insurance plan</string>
    <string name="title_plan_selected_header">Plan Selected</string>
    <string name="title_amount_to_be_deducted_header">Amount to be deducted</string>
    <string name="title_coverage_header">Coverage</string>
    <string name="coverage_option_description">A coverage option</string>
    <string name="title_terms_and_conditions_header">Terms and Conditions</string>
    <string name="title_terms_and_conditions">Terms and Conditions here</string>
    <string name="checkout_button_text">Checkout</string>
    <string name="pay_now_button_text">Pay Now</string>
    <string name="insurance_1_title">Insurance 1</string>
    <string name="insurance_1_details">This is insurance 1</string>
    <string name="insurance_2_title">Insurance 2</string>
    <string name="insurance_2_details">This is insurance 2</string>
    <string name="insurance_3_title">Insurance 3</string>
    <string name="insurance_3_details">This is insurance 3</string>
    <string name="insurance_4_title">Insurance 4</string>
    <string name="insurance_4_details">This is insurance 4</string>
    <string name="debit_card">Debit Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="overflow_help">Help</string>
    <string name="insurance_plan_default_title">title</string>
    <string name="default_number">999,999</string>
    <string name="default_amount_type">Current Balance</string>
    <string name="default_amount_suffix">Razer Gold</string>
    <string name="add">+</string>
    <string name="dinosaur_text">People your age usually goes for\n Endowment Plans.\n New? Let me guide you!</string>
    <string name="get_insurance">Get Insurance</string>
    <string name="save_a_copy">Save a copy\nof your family\'s insurance</string>
    <string name="endowment_plans_title">Endowment\nPlans</string>
    <string name="car_insurance_title">Car\nInsurance</string>
    <string name="travel_insurance_title">Travel\nInsurance</string>
    <string name="more_options_title">More\nOptions</string>
    <string name="title_question">What is it?</string>
    <string name="dinosaur_text_insurance_plan">Hey Jolyn, Just swipe these cards left\nto read more about what an\nEndowment Plan is</string>
    <string name="default_statistics">73%</string>
    <string name="default_statistics_rest">of your friend in Razer have bought\nthis plan. Here are some of your peers\nwho are open to sharing:</string>
    <string name="title_policy_overview">Overall policy plans</string>
    <string name="default_number_of_current_policies_1">2</string>
    <string name="current_policy_shown_1">Travel Plans</string>
    <string name="default_number_of_current_policies_2">1</string>
    <string name="current_policy_shown_2">Endowment Plan</string>
    <string name="current_policies">Current policies</string>
    <string name="travel_plan_details_header">Travel Plan Details</string>
    <string name="reward_profile_level_text">Level 3</string>
    <string name="my_badges_header_text">My Badges</string>
    <string name="my_vouchers_header_texts">My Vouchers</string>
    <string name="travel_plan_introduction">We looked into the finer details of the plan and figured out what works best for you. Thank us later! Also, please let us know how we can improve.</string>
    <string name="exp_bar_header_text">EXP to next level: 0/1000</string>
    <string name="welcome_back_text">Welcome back, User!</string>
    <string name="travel_plans_header">Travel Plans</string>
    <string name="travel_plans_description_header_text">Trip Details</string>
    <string name="travel_plans_description_header_body">Policy Type: Single</string>
    <string name="travel_plans_description_header_body2">Who\'s going: Only Me</string>
    <string name="travel_plans_description_header_body3">Destination: Malaysia</string>
    <string name="travel_plans_description_header_body4">Start Date: 05/05/2019</string>
    <string name="travel_plans_description_header_body5">End Date: 05/05/2020</string>
    <string name="travel_plan_selection_button_text">Select Travel Plan</string>
    <string name="title_activity_travel_plans">TravelPlansActivity</string>
    <string name="travel_plan_description">This is a travel plan</string>
    <string name="terms_and_conditions_agree_text">I hereby agree to the terms and conditions stated above.</string>
</resources>