<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.razerinsure.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.razerinsure.ui.browse.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.razerinsure.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.razerinsure.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_insurance_plan"
        android:name="com.razerinsure.ui.home.InsurancePlanFragment"
        android:label="Insurance Plan"
        tools:layout="@layout/fragment_insurance_plan"/>
</navigation>
