<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
    <TextView
        android:id="@+id/travel_plans_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_marginLeft="@dimen/text_big"
        android:text="@string/travel_plans_header"
        android:textColor="@color/black"
        android:textSize="@dimen/text_big"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/travel_plans_description_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_below="@id/travel_plans_header"
        android:layout_marginLeft="@dimen/text_big"
        android:text="@string/travel_plans_description_header_text"
        android:textColor="#B5B8CB"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/travel_plans_description_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_below="@id/travel_plans_description_header"
        android:layout_marginLeft="@dimen/text_big"
        android:text="@string/travel_plans_description_header_body"
        android:textColor="#B5B8CB"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/travel_plans_description_body4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_below="@id/travel_plans_description_header"
        android:layout_toRightOf="@+id/travel_plans_description_body"
        android:layout_marginLeft="50sp"
        android:text="@string/travel_plans_description_header_body4"
        android:textColor="#B5B8CB"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/travel_plans_description_body5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_below="@id/travel_plans_description_body4"
        android:layout_toRightOf="@+id/travel_plans_description_body2"
        android:layout_marginLeft="33sp"
        android:text="@string/travel_plans_description_header_body5"
        android:textColor="#B5B8CB"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/travel_plans_description_body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_below="@id/travel_plans_description_body"
        android:layout_marginTop="-10sp"
        android:layout_marginLeft="@dimen/text_big"
        android:text="@string/travel_plans_description_header_body2"
        android:textColor="#B5B8CB"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/travel_plans_description_body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_below="@id/travel_plans_description_body2"
        android:layout_marginTop="-10sp"
        android:layout_marginLeft="@dimen/text_big"
        android:text="@string/travel_plans_description_header_body3"
        android:textColor="#B5B8CB"
        android:textSize="15sp"
        android:textStyle="bold" />


    <ImageView
        android:layout_width="600dp"
        android:layout_height="400dp"
        android:id="@+id/travel_plan_card_picture"

        android:layout_marginTop="100dp"
        android:background="@mipmap/ic_travel_plan_card"
        android:layout_below="@+id/travel_plans_header"
        android:contentDescription="@string/travel_plan_description" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/travel_plan_selection_button"

        android:layout_below="@+id/travel_plan_card_picture"
        android:layout_centerInParent="true"
        android:text="@string/travel_plan_selection_button_text" />

    </RelativeLayout>
</RelativeLayout>