<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">
       <RelativeLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">

    <TextView
        android:id="@+id/plan_details_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/text_medium"
        android:layout_marginTop="@dimen/text_medium"
        android:text="@string/travel_plan_details_header"
        android:textColor="@color/insurance_text_color"
        android:textSize="@dimen/text_big"
        android:textStyle="bold" />

    <TextView
        android:id="@id/travel_plan_introduction"
        android:layout_width="350sp"
        android:layout_height="wrap_content"

        android:layout_below="@id/plan_details_header"
        android:layout_marginTop="@dimen/text_big"
        android:layout_marginLeft="@dimen/coverage_header_margin_left"
        android:text="@string/travel_plan_introduction"
        android:textColor="@color/insurance_text_color"
        android:textSize="@dimen/text_medium" />


    <ImageView
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:id="@+id/travel_plan_picture"

        android:layout_alignParentEnd="true"
        android:background="@mipmap/ic_plan_details_background_round"
        android:layout_below="@+id/travel_plan_introduction"
        android:contentDescription="@string/saved_card_description" />

    <TextView
        android:id="@+id/coverage_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/travel_plan_picture"
        android:layout_marginTop="-28dp"
        android:layout_marginLeft="@dimen/coverage_header_margin_left"
        android:text="@string/title_coverage_header"
        android:textColor="@color/insurance_text_color"
        android:textSize="@dimen/text_big"
        android:textStyle="bold" />

    <include
        layout="@layout/coverage_option_group_view"
        android:id="@+id/coverage_option_group_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coverage_header" />

    <TextView
        android:id="@+id/terms_and_conditions_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/coverage_option_group_view"
        android:layout_marginTop="@dimen/terms_and_conditions_top_margin"
        android:layout_marginLeft="@dimen/coverage_header_margin_left"
        android:text="@string/title_terms_and_conditions_header"
        android:textColor="@color/insurance_text_color"
        android:textSize="@dimen/text_big"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/terms_and_conditions_scroll_height"
        android:scrollbars="vertical"

        android:text="Terms and Conditions here"
        android:layout_below="@+id/terms_and_conditions_header"
        android:layout_marginLeft="@dimen/terms_and_conditions_body_margin_left"
        android:textColor="@color/black"
        android:textSize="@dimen/text_medium" />

    <Button
        android:id="@+id/checkoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/pay_now_button_text"
        android:layout_below="@+id/terms_and_conditions_agree_statement"
        android:layout_centerInParent="true" />

           <ImageView
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:id="@+id/terms_and_conditions_agree"

               android:background="@mipmap/ic_tick_for_terms_and_conditions_foreground"
               android:layout_below="@+id/terms_and_conditions"
               android:layout_marginTop="-20dp"
               android:contentDescription="@string/saved_card_description" />

           <TextView
               android:id="@+id/terms_and_conditions_agree_statement"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"

               android:text="@string/terms_and_conditions_agree_text"
               android:layout_below="@+id/terms_and_conditions"
               android:layout_marginLeft="50sp"
               android:textColor="@color/black"
               android:textSize="@dimen/text_medium" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
